test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 26 Jan 2026 03:06:26 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="2SA/BgwnOXhT+9dHD3hGG/tCsN72BE7C", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}